# barista

./: .clangd  .dir-locals.el  .editorconfig  .emacs-integration.el  .gitignore  .halext-integration.json  .projectile  .yaze-integration.json  AGENTS.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_README.md  ARCHITECTURE_SUMMARY.txt  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTROL_PANEL_DESIGN.md  GITHUB_SETUP.md  HALEXT_GUI_VISION.md  INTEGRATION_SUMMARY.md  LICENSE  PORTABILITY_SUMMARY.md  PROJECT.toml  QUICK_REBUILD.md  QUICK_REFERENCE.md  README.md  README_DEV.md  REFACTORING_SUMMARY.md  WIDGET_FIXES.md  deploy.sh  fix_icons_comprehensive.lua  icon_map.json  install.sh  main.lua  rebuild.sh  rebuild_gui.sh  requirements.txt  sketchybarrc  (+5 more)
Formula/: barista.rb
components/: README.md  apple_menu.lua  clock.lua  front_app.lua  yabai.lua
config/: icon_map.json  requirements.txt
data/: interface_extensions.example.json  interface_extensions.personal.example.json  machine_profiles.example.json  menu_help.json  project_shortcuts.json  work_apps.work.json  workflow_shortcuts.json  workflow_shortcuts.local.example.json
docs/: BARISTA_CONTROL_PANEL.md  BARISTA_LAUNCH_AGENT.md  BUILD.md  CHANGELOG.md  CMake_MIGRATION.md  CONTROL_PANEL_PARITY.md  CONTROL_PANEL_V2.md  DEBUGGING_ANALYSIS.md  FIXES_SUMMARY.md  GLOSSARY.md  GOOGLE_CPP_WORKFLOWS.md  GOOGLE_WORKFLOWS_SUMMARY.md  HOMEBREW_TAP.md  IMPROVEMENTS.md  INDEX.md  INSTALLATION_GUIDE.md  MENU_REDESIGN_PROPOSAL.md  MIGRATION_TO_CPP.md  PERFORMANCE_AUDIT.md  PRE_SETUP_CHECKLIST.md  STATE_SCHEMA.md  SYSTEM_FIXES.md  UPDATE_GUIDE.md  WHICHKEY_PLAN.md  WORK_MACBOOK_SETUP.md
gui/: BaristaControlPanel-Info.plist.in  CMakeLists.txt  Makefile  README.md  config_menu.m  config_menu.m.bak  config_menu_enhanced.m  config_menu_v2.m  help_center.m  icon_browser.m  main.c
gui/src/: main.m
gui/src/core/: AppDelegate.h  AppDelegate.m  BaristaCommandBus.h  BaristaCommandBus.m  BaristaPanelState.h  BaristaPanelState.m  BaristaPanelView.h  BaristaPanelView.m  BaristaPanelWindow.h  BaristaPanelWindow.m  BaristaStyle.h  BaristaStyle.m  BaristaTabBaseViewController.h  BaristaTabBaseViewController.m  BaristaTabRegistry.h  BaristaTabRegistry.m  ConfigurationManager.h  ConfigurationManager.m  MainWindowController.h  MainWindowController.m
gui/src/tabs/: AdvancedTabViewController.h  AdvancedTabViewController.m  AppearanceTabViewController.h  AppearanceTabViewController.m  DebugTabViewController.h  DebugTabViewController.m  HomeTabViewController.h  HomeTabViewController.m  IconsTabViewController.h  IconsTabViewController.m  IntegrationsTabViewController.h  IntegrationsTabViewController.m  LaunchAgentsTabViewController.h  LaunchAgentsTabViewController.m  MenuTabViewController.h  MenuTabViewController.m  PerformanceTabViewController.h  PerformanceTabViewController.m  ShortcutsTabViewController.h  ShortcutsTabViewController.m  SpacesTabViewController.h  SpacesTabViewController.m  ThemesTabViewController.h  ThemesTabViewController.m  WidgetsTabViewController.h  WidgetsTabViewController.m  WorkflowTabViewController.h  WorkflowTabViewController.m
helpers/: .gitignore  CMakeLists.txt  app_icons.lua  ci_status.sh  clock_widget  clock_widget.c  cpp_project_switch.sh  fix_icons.lua  generate_shortcuts.lua  icon_manager  icon_manager.c  launch_agent_manager.sh  makefile  menu_action  menu_action.cpp  menu_renderer  menu_renderer.c  migrate.sh  migrate_to_code.sh  popup_anchor  popup_anchor.c  popup_guard  popup_guard.c  popup_hover  popup_hover.c  popup_manager  popup_manager.c  post_update.sh  runtime_context_helper.m  setup_permissions.sh  space_manager  space_manager.c  space_visual_helper.m  ssh_sync.sh  state_manager  state_manager.c  submenu_hover  submenu_hover.c  system_info_widget  system_info_widget.c  (+4 more)
helpers/event_providers/: CMakeLists.txt
helpers/lib/: json.lua
helpers/menus/: CMakeLists.txt
launch_agents/: README.md  barista-launch.sh  com.scawful.afs-webui.plist  dev.barista.control.plist  dev.barista.mouse-buttons.plist
modules/: apple_menu_enhanced.lua  apple_menu_model.lua  bar_config.lua  binary_resolver.lua  c_bridge.lua  component_switcher.lua  display_profile.lua  icon_manager.lua  icons.lua  interface_extensions.lua  items_left.lua  items_right.lua  menu.lua  menu_renderer.lua  menu_style.lua  paths.lua  popup_action.lua  popup_items.lua  profile.lua  project_shortcuts.lua  runtime_daemon.lua  runtime_startup.lua  shell_utils.lua  shortcuts.lua  spaces.lua  state.lua  submenu_registry.lua  tool_locator.lua  ui_builder.lua  whichkey.lua  widgets.lua
plugins/: README.md  ai_resource_toggle.sh  apple_menu.sh  bar_logs.sh  battery.sh  bazel_status.sh  calendar.sh  clock.sh  control_center.sh  control_center_close.sh  cortex_widget.sh  cpp_build_status.sh  cpu.sh  focus_space.sh  front_app.sh  halext_menu.sh  icons.sh  input_action.sh  input_click.sh  lmstudio_model.sh  menu_action.sh  music_studio.sh  network.sh  ollama_prompt.sh  oracle_triforce.sh  popup_anchor.sh  popup_guard.sh  popup_hover.sh  popup_manager.sh  refresh_spaces.sh  reload_sketchybar.sh  set_integration_enabled.sh  set_space_mode.sh  simple_spaces.sh  space.sh  space_creator.sh  space_hover_app.sh  space_icons_prefetch.sh  space_mode.sh  space_visuals.sh  (+9 more)
profiles/: cozy.lua  girlfriend.lua  minimal.lua  personal.lua  work.lua
scripts/: app_icon.sh  bar_logs.sh  barista-debug.sh  barista-doctor.sh  barista-fonts.sh  barista-verify.sh  check_scripts.sh  configure_restricted_work_barista.sh  configure_work_google_apps.sh  deploy.sh  deploy_info.sh  detect_capabilities.sh  discover_project_shortcuts.sh  focus_display_and_toggle_popup.sh  focus_session.py  front_app_action.sh  front_app_context.sh  install-tui.sh  install.sh  install_control_panel_app.sh  install_missing_fonts_and_panel.sh  invoke_popup_click.sh  lmstudio_control.sh  machine_profile.py  media_control.sh  mouse_button_mapper.py  open_icon_browser.sh  open_keyboard_overlay.sh  open_local_workflow.sh  open_sys_manual.sh  oracle_layout.sh  (+35 more)
(+203 files in other folders)
